# fog-app

./: .gitignore  HOWTO_CONFIGURE  LDMrules-config-file.xml  README  application-config-file.xml  configure.ac  facilities-config-file.xml  itetris-config-file.xml  itsfogapp-config-file.xml  mount_log.sh  note
network/: highway.rou.xml  highway.standalone.sumo.cfg  highway.sumo.cfg  process_dump.py
network.static/: gui-settings.cfg  highway.net.xml  highway.rou.xml  highway.sumo.cfg
ns-3_files/: confDvbhBs.xml  confUmtsBs.xml  confWaveVehicle2.xml  confWifi.xml  confWimaxBs.xml  confWimaxVehicle.xml  configTechnologies-ics.xml
results/densities/: make.py
simulations/common/: application-config-file.xml  facilities-config-file.xml  highway.standalone.sumo.cfg  highway.sumo.cfg  itetris-config-file.xml  itsfogapp-config-file.xml  stations-config-file.xml
simulations/common/ns-3_files/: confDvbhVehicle.xml  confUmtsVehicle.xml  confWaveRsu.xml  configGeneral.txt
simulations/crash/: itetris-config-file.xml  itsfogapp-config-file.xml  ns-3_files
simulations/crash/network/: highway.rou.xml  highway.standalone.sumo.cfg
simulations/defaults/: application-config-file-AP.xml  application-config-file.xml  facilities-config-file.xml  itsfogapp-config-file-AP.xml  mount_log.sh  ns-3_files  stations-config-file-AP.xml
simulations/defaults.static/: LDMrules-config-file.xml  itetris-config-file.xml  itsfogapp-config-file.xml  stations-config-file.xml
simulations/defaults.static/network/: gui-settings.cfg
simulations/defaults/network/: highway.net.xml  highway.rou.xml  highway.sumo.cfg
simulations/densities/: results.sh  simulate.sh
simulations/densities/1000/: application-config-file.xml
simulations/densities/1000/network/: highway.net.xml  highway.rou.xml
simulations/densities/1500/: itetris-config-file.xml  ns-3_files  stations-config-file.xml
simulations/densities/1500/network/: highway.rou.xml
simulations/densities/3000/: LDMrules-config-file.xml  application-config-file.3000.xml  itetris-config-file.3000.xml  itsfogapp-config-file.3000.xml
simulations/densities/3000/network/: highway.3000.rou.xml  highway.3000.sumo.cfg
simulations/densities/4500/network/: highway.rou.xml
simulations/densities/500/: itsfogapp-config-file.xml
simulations/densities/500/network/: highway.rou.xml  highway.sumo.cfg
simulations/densities/baseline/: results.sh  run.sh  simulate.sh
simulations/densities/common/: clean.sh  generate.sh  generate_all.sh  highway.standalone.sumo.cfg.in  highway.sumo.cfg  highway.sumo.cfg.in
simulations/densities/dangerous-vehicle/: simulate.sh
simulations/densities/dangerous-vehicle/alert-disabled/: simulate.sh
simulations/densities/dangerous-vehicle/alert-enabled/: results.sh
simulations/densities/interprétation/: TODO  compile.sh  compileRate.py  compileResults.py  graph.py  graph_CO2.py  graph_TTC.py  graph_TTC_part.py  graph_dist_part.py  graph_rate.py  mail  rapport.tex
simulations/densities/linedeviation/network/: highway.standalone.sumo.cfg
simulations/densities/results/: TTC.mean  TTC_diff.mean  compileRate.py  compileTTC.py  graph_TTC.py  graph_TTC_diff.py  graph_rate.py  rate.mean
simulations/densities/stopped-vehicle/: control.speed  disabled.speed  enabled.speed
simulations/densities/stopped-vehicle/alert-disabled/: results.sh  run.sh  simulate.sh
simulations/densities/stopped-vehicle/alert-enabled/: results.sh  run.sh
simulations/densities/stopped-vehicle/results/: .compileTTC.py.swo  .compileTTC.py.swp  .graph_TTC.py.swp  TTC.mean  TTC.mean.old  compileTTC.py  graph_TTC.py
simulations/densities/with-ap/alert-enabled/: simulate.sh
simulations/densities/without-ap/: simulate.sh
simulations/densities/without-ap/alert-disabled/: result.tar
simulations/densities/without-ap/alert-enabled/: result.tar  results.sh
simulations/results/TTC/: TTC.txt  make.py
simulations/results/densities/: reception_rate.txt
simulations/tools/: get_rate_slowed.sh  process_dangerous.py  process_dump.py  process_trip.py  simu-new.sh  simu-run.sh
src/: Makefile.am  app-commands-subscriptions-constants.h  application-logic.cpp  application-logic.h  config.h.in  fog_app_main.cpp  server.cpp  server.h  windows_config.h
src/foreign/: Makefile.am  additional.txt
src/foreign/tcpip/: socket.cpp  socket.h  storage.cpp  storage.h
src/utils/: Makefile.am
src/utils/common/: AbstractMutex.h  Command.h  DijkstraRouterEffort.h  DijkstraRouterTT.h  FileHelpers.cpp  FileHelpers.h  HelpersHBEFA.cpp  HelpersHBEFA.h  HelpersHarmonoise.cpp  HelpersHarmonoise.h  IDSupplier.cpp  IDSupplier.h  InstancePool.h  MsgHandler.cpp  MsgHandler.h  MsgRetrievingFunction.h  Named.h  NamedObjectCont.h  RGBColor.cpp  RGBColor.h  RandHelper.cpp  RandHelper.h  RandomDistributor.h  SUMOAbstractRouter.h  SUMOTime.cpp  SUMOTime.h  SUMOVTypeParameter.cpp  SUMOVTypeParameter.h  SUMOVehicle.h  SUMOVehicleClass.cpp  SUMOVehicleClass.h  SUMOVehicleParameter.cpp  SUMOVehicleParameter.h  StaticCommand.h  StdDefs.h  StringTokenizer.cpp  StringTokenizer.h  StringUtils.cpp  StringUtils.h  SysUtils.cpp  (+12 more)
src/utils/iodevices/: BinaryInputDevice.cpp  BinaryInputDevice.h  OutputDevice.cpp  OutputDevice.h  OutputDevice_COUT.cpp  OutputDevice_COUT.h  OutputDevice_File.cpp  OutputDevice_File.h  OutputDevice_Network.cpp  OutputDevice_Network.h  OutputDevice_String.cpp  OutputDevice_String.h
src/utils/log/: Makefile.am  log.cpp  log.h
src/utils/options/: Option.cpp  Option.h  OptionsCont.cpp  OptionsCont.h  OptionsIO.cpp  OptionsIO.h  OptionsLoader.cpp  OptionsLoader.h  OptionsParser.cpp  OptionsParser.h
src/utils/xml/: GenericSAXHandler.cpp  GenericSAXHandler.h  SAXWeightsHandler.cpp  SAXWeightsHandler.h  SUMOSAXAttributes.cpp  SUMOSAXAttributes.h  SUMOSAXAttributesImpl_Xerces.cpp  SUMOSAXAttributesImpl_Xerces.h  SUMOSAXHandler.cpp  SUMOSAXHandler.h  SUMOVehicleParserHelper.cpp  SUMOVehicleParserHelper.h  SUMOXMLDefinitions.cpp  SUMOXMLDefinitions.h  XMLSubSys.cpp  XMLSubSys.h
tools/: get_rate_slowed.sh  process_dump.py  simu-densites.sh
(+252 files in other folders)
